fix(settings): fix inconsistent spacing for settings

--- a/src/renderer/src/features/settings-button/components/setting-widget/SettingWidget.module.scss
+++ b/src/renderer/src/features/settings-button/components/setting-widget/SettingWidget.module.scss
@@ -1,5 +1,5 @@
 .settingWidget {
    // background: var(--widgetBG);
-   padding: .25em .75em;
+   padding: .25em 0;
    border-radius: var(--borderRadiusStandard);
 }
